<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/actor"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/email"
        android:textColor="@color/black"
        android:fontFamily="@font/actor"
        android:textSize="22sp"
        tools:ignore="TouchTargetSizeCheck"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:fontFamily="@font/actor"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/request"
        android:textColor="@color/new_hint"
        android:textSize="18sp"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>


</LinearLayout>