<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        tools:ignore="SpeakableTextPresentCheck,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textStyle="italic"/>

            <LinearLayout
                android:id="@+id/dom_click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/dom_selector"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cow_clip"
                    android:contentDescription="@string/todo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/domestic_animals"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wild_click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/wild_selector"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/lion_clip"
                    android:contentDescription="@string/todo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wild_animals"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bird_click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bird_selector"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/bird_clip"
                    android:contentDescription="@string/todo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birds"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aqua_click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/aqua_selector"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/aqua_clip"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aquatic_animals"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/insect_click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/insect_selector"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/bee_clip"
                    android:contentDescription="@string/todo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insects"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>